Bug 1209621 - Add a way to get the TabParent for the content-primary tab, r=mconley